--- a/ILoggerInterceptor.csproj
+++ b/ILoggerInterceptor.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Elastic.Apm" Version="1.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.3" />
   </ItemGroup>
 
